--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
   
-    <script src="./thai.js"></script>
+    <script src="./main.js"></script>
     <script>
         document.write('Hép pi bớt đêy')
+  
     </script>
+   
 </body>
 </html>
