--- a/index.html
+++ b/index.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HBD đĩ Thị Thãi</title>
-    <link rel="stylesheet" href="thai.css">
+    <title>HIHI</title>
+    <link rel="stylesheet" href="./styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400&display=swap" rel="stylesheet">
 </head>
 <body>
-  
-    <script src="./main.js"></script>
-    <script>
-        document.write('Hép pi bớt đêy')
-  
-    </script>
-   
+    <div class="container">
+        <div class="box">
+            <div class="box__text">
+               <h4>Bày đặt 21 tuổi</h1>
+            </div>
+            <img class="box__img" src="image/home.png" alt="" >
+            <div class="box__btn">
+                <a href="./gift.html">
+                  Bày đặt 21 tuổi
+                </a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
