--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HIHI</title>
+    <title>BDay_đTT</title>
     <link rel="stylesheet" href="./styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400&display=swap" rel="stylesheet">
 </head>
@@ -12,12 +12,12 @@
     <div class="container">
         <div class="box">
             <div class="box__text">
-               <h4>Bày đặt 21 tuổi</h1>
+               <h2> BÀY ĐẶT 21 TUỔI ĐỒ 😏</h2>
             </div>
             <img class="box__img" src="image/home.png" alt="" >
             <div class="box__btn">
                 <a href="./gift.html">
-                  Bày đặt 21 tuổi
+                  Bấm vô lẹ điiiiii 💌
                 </a>
             </div>
         </div>
