--- a/gift.html
+++ b/gift.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>XEM RUI NHỚ LAI VÀ SẬP RAI</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <div class="container__video">
-        <iframe width="760" height="445" src="https://www.youtube.com/embed/iyGyU4KpR-Y?autoplay=1">
+        <iframe width="760" height="445" src="https://www.youtube.com/embed/IvcwOZXZGNo">
         </iframe>
     </div>
 </body>S
