--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img class="box__img" src="image/home.png" alt="" >
             <div class="box__btn">
                 <a href="./gift.html">
-                  Bấm vô lẹ điiiiii 💌
+                  Bấm vô lẹ điiiii 💌
                 </a>
             </div>
         </div>
